--- a/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
@@ -2919,6 +2919,15 @@ button {
     .dropdown:hover .dropdown-menu.nojs {
         display: block;
     }
+
+}
+
+.ill_availability_sourcename {
+    margin-top: 20px;
+}
+
+#continue-request-row {
+    text-align: center;
 }
 
 #dc_fieldset {
