Bug 23173: (follow-up) Allow for customisable display name
We now allow for the service to return a name that can be specified in
the plugin config. This patch switches to using that, rather than just
the plugin name defined in the plugin's metadata hashref

Signed-off-by: Niamh Walker-Headon <Niamh.Walker-Headon@tudublin.ie>

Signed-off-by: Kyle M Hall <kyle@bywatersolutions.com>

--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-illrequests.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-illrequests.tt
@@ -251,7 +251,7 @@
                                 </div>
                             </form>
                             [% FOR service IN services %]
-                                <h4 class="ill_availability_sourcename">[% service.plugin %]</h4>
+                                <h4 class="ill_availability_sourcename">[% service.name %]</h4>
                                 [% INCLUDE 'ill-availability-table.inc' service=service %]
                             [% END %]
                         </div>
