--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/viewlog.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/viewlog.tt
@@ -118,6 +118,24 @@
 [%        CASE 'DELCIRCMESSAGE' %]Delete circulation message
 [%        CASE 'STATUS_CHANGE'  %]Change ILL request status
 [%        CASE 'PATRON_NOTICE'  %]ILL notice sent to patron
+[%        CASE 'ADD_BASKET' %]Create an acquisitions basket
+[%        CASE 'MODIFY_BASKET' %]Modify an acquisitions basket
+[%        CASE 'MODIFY_BASKET_HEADER' %]Modify an acquisitions basket header
+[%        CASE 'MODIFY_BASKET_USERS' %]Modify an acquisitions basket's users
+[%        CASE 'CLOSE_BASKET' %]Close an acquisitions basket
+[%        CASE 'APPROVE_BASKET' %]Approve an acquisitions basket
+[%        CASE 'REOPEN_BASKET' %]Reopen an acquisitions basket
+[%        CASE 'CANCEL_ORDER' %]Cancel an order
+[%        CASE 'CREATE_ORDER' %]Create an order
+[%        CASE 'MODIFY_ORDER' %]Modify an order
+[%        CASE 'CREATE_INVOICE_ADJUSTMENT' %]Create an invoice adjustment
+[%        CASE 'UPDATE_INVOICE_ADJUSTMENT' %]Modify an invoice adjustment
+[%        CASE 'DELETE_INVOICE_ADJUSTMENT' %]Delete an invoice adjustment
+[%        CASE 'RECEIVE_ORDER' %]Receive an order
+[%        CASE 'MODIFY_BUDGET' %]Modify a budget
+[%        CASE 'CREATE_FUND' %]Create a fund
+[%        CASE 'MODIFY_FUND' %]Modify a fund
+[%        CASE 'DELETE_FUND' %]Delete a fund
 [%        CASE 'Run'    %]Run
 [%        CASE 'EDIT_MAPPINGS' %]Edit mappings
 [%        CASE 'RESET_MAPPINGS' %]Reset mappings
@@ -194,7 +212,7 @@
                                         <label for="actionALL" class="viewlog"><input type="checkbox" id="actionALL" name="actions" value=""> All</label>
                                     [% END %]
 
-                                    [% FOREACH actx IN [ 'ADD' 'DELETE' 'MODIFY' 'ISSUE' 'RETURN' 'RENEW' 'CREATE' 'CANCEL' 'SUSPEND' 'RESUME' 'ADDCIRCMESSAGE' 'DELCIRCMESSAGE' 'STATUS_CHANGE' 'PATRON_NOTICE' 'CHANGE PASS' 'Run' 'EDIT_MAPPINGS' 'RESET_MAPPINGS' ] %]
+                                    [% FOREACH actx IN [ 'ADD' 'DELETE' 'MODIFY' 'ISSUE' 'RETURN' 'RENEW' 'CREATE' 'CANCEL' 'SUSPEND' 'RESUME' 'ADDCIRCMESSAGE' 'DELCIRCMESSAGE' 'STATUS_CHANGE' 'PATRON_NOTICE' 'CHANGE PASS' 'Run' 'EDIT_MAPPINGS' 'RESET_MAPPINGS' 'ADD_BASKET' 'MODIFY_BASKET' 'MODIFY_BASKET_HEADER' 'MODIFY_BASKET_USERS' 'CLOSE_BASKET' 'APPROVE_BASKET' 'REOPEN_BASKET' 'CANCEL_ORDER' 'CREATE_ORDER' 'MODIFY_ORDER' 'CREATE_INVOICE_ADJUSTMENT' 'UPDATE_INVOICE_ADJUSTMENT' 'DELETE_INVOICE_ADJUSTMENT' 'RECEIVE_ORDER' 'MODIFY_BUDGET' 'MODIFY_FUND' 'CREATE_FUND' 'DELETE_FUND'] %]
                                         [% IF actions.grep(actx).size %]
                                             <label for="action[% actx| replace('\s+', '_') | html %]" class="viewlog"><input type="checkbox" id="action[% actx | replace('\s+', '_') | html %]" name="actions" value="[% actx | html %]" checked="checked"> [% PROCESS translate_log_action action=actx %]</label>
                                         [% ELSE %]
