--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -3773,6 +3773,10 @@ input.renew {
         transform: translateY(-50%);
     }
 
+    #generic_confirm_search_count {
+        margin: 1em 0 1em 10em;
+    }
+
     #generic_confirm_search {
         display: block;
         visibility: hidden;
